Update: Modal context overflow-y scroll content phone fix

--- a/src/components/context/Context.scss
+++ b/src/components/context/Context.scss
@@ -83,11 +83,8 @@
             flex-direction: column;
             gap: 40px;
 
-            .ctx_inner_cover {
-                height: 523px;
-                background-position: center;
-                background-repeat: no-repeat, repeat;
-                background-size: cover;
+            img {
+                width: 100%;
                 border-radius: 16px;
             }
 
@@ -147,6 +144,7 @@
 
         .ctx_subcont {
             border-radius: 32px 32px 0px 0px;
+            padding-bottom: 128px;
 
             .ctx_close {
                 display: none;
